#77 - text overflow issue fixed

--- a/themes/indigo-wine/less/_woocommerce.less
+++ b/themes/indigo-wine/less/_woocommerce.less
@@ -51,7 +51,7 @@
 			text-transform: capitalize;
 		}
 		h1{
-			display: inline;
+			display: inherit;
 		}
 	}
 }
